OpenAPI oneOf support (#647)